--- a/pygmalion-z.css
+++ b/pygmalion-z.css
@@ -12,6 +12,8 @@
         }
         a, 
         a:hover {
+            border: none !important;
+            outline: 0 !important;
             text-decoration: none !important;
             transition: all 0.3s ease-in-out !important;
         }
@@ -75,6 +77,15 @@
         .warning {
             /*** WARNING ***/
             color: #212121 !important;
+        }
+        form[enctype="multipart/form-data"],
+        .middlead.center,
+        .ss-sidebar:root body::before {
+            /*** OTHERS ***/
+            display: none !important;
+        }
+        .exlinksOptionsLink.entry {
+            opacity: 0 !important;
         }
    
 /* HEADER BAR */
@@ -192,11 +203,15 @@
             border-radius: 1px !important;
         }
     
-/* RIGHTSIDEBAR */
-/** DESCRIPTION : change the appearance and position of elements of the right sidebar **/
+/* SIDEBAR */
+/** DESCRIPTION : change the appearance and position of elements of the sidebar **/
         .right-sidebar:root body {
             /*** RIGHT SIDEBAR WIDTH ***/
             padding-right: 0px;
+        }
+        .left-sidebar:root body {
+            /*** LEFT SIDEBAR WIDTH ***/
+            padding-left: 0px;
         }
         :root {
             --banner: url('https://i.imgur.com/QEKEvkx.jpg');
@@ -363,7 +378,7 @@
             max-height: 100px !important;
             padding: 0px 5px 10px 5px !important;
             margin-top: -5px !important;
-            margin-bottom: -1px !important;
+            margin-bottom: -4px !important;
             overflow: hidden !important;
             text-overflow: ellipsis !important;
             white-space: nowrap !important;
@@ -377,6 +392,7 @@
         #qr {
             background: #FFF !important;
             border: 1px solid #EBEBEB !important;
+            opacity: 1 !important;
             padding: 10px !important;
         }
         .textarea {
@@ -474,7 +490,6 @@
         .pages.cataloglink {
             display: none;
         }
-}
 
 /* THREAD */
 /** DESCRIPTION : tweak the elements of the thread page **/
@@ -487,10 +502,14 @@
             margin-right: 5.1% !important;
             margin-left: 4.9% !important;
         }
-        .is_thread #update-timer,
-        .is_thread #update-status {
+        #update-timer,
+        #update-status {
             /*** THREAD NAVLINKS ***/
             display: none !important;
+        }
+        .style-stats:root #thread-stats, .style-stats:root #updater, .style-stats:root #stats {
+            border: none !important;
+            box-shadow: none !important;
         }
         :root.fixed .is_thread #shortcuts #shortcut-stats {
             color: #FFF !important;
@@ -555,8 +574,10 @@
             margin-right: 10px !important;
         }
         .quotelink {
+            border: none !important;
             color: #DC626F !important;
             font-weight: bold !important;
+            text-decoration: none !important;
         }
         .opContainer.opContainer {
             /*** OP ***/
@@ -782,5 +803,5 @@
             bottom: 0px !important;
             margin-left: -2px !important;
             visibility: visible !important;
-         }
+         }   
 }
