--- a/pygmalion-z.css
+++ b/pygmalion-z.css
@@ -134,7 +134,8 @@
 			font-size: 15pt !important;
 			font-weight: normal !important;
 		}
-		#fourchanx-settings .suboption-list > div:last-of-type {
+		#fourchanx-settings .suboption-list > div:last-of-type,
+		.focused.entry {
     		background: #FFF !important;
 		}
 		#oneechan-options .tab-item * {
@@ -181,6 +182,7 @@
 		input[type="checkbox"]:checked + .riceCheck::before {
     		filter: invert(1) !important;
 		}
+		
 /* HEADER BAR */
 /** DESCRIPTION : change the appearance of the headerbar **/
         #header-bar {
@@ -292,8 +294,11 @@
 			font-stretch: condensed !important;
             padding: 15px !important;
         }
-		#watched-threads * {
+		#watched-threads a {
 			color: #47B39D !important;
+		}
+		#watched-threads .replies-unread.replies-quoting-you * {
+			color: #34495E !important;
 		}
         #shortcuts .dialog:not(#qr):not(#thread-watcher):not(#header-bar) * {
 			font-size: 11pt !important;
