--- a/pygmalion-z-dark.css
+++ b/pygmalion-z-dark.css
@@ -1,6 +1,5 @@
 @-moz-document domain("boards.4chan.org") {
-
-    /* GENERAL */
+/* GENERAL */
 
     /** DESCRIPTION : set the main font and change others elements **/
     * {
@@ -235,7 +234,7 @@
     }
 
     .show-board-list-button {
-        margin-top: -76px !important;
+        margin-top: -84px !important;
     }
 
     #header-bar #full-board-list a {
@@ -637,6 +636,19 @@
         margin-top: -1px !important;
     }
 
+    #header-bar .notification {
+    
+        /*** HEADER NOTIFICATIONS ***/
+        font-stretch: condensed !important;
+        text-shadow: none !important;
+        padding: 10px 10px 15px 10px !important;
+    }
+
+    #header-bar .notification * {
+        font-size: 13pt !important;
+        font-weight: normal !important;
+    }
+    
     /* BANNER */
 
     /** DESCRIPTION : change the elements of the banner **/:root {
@@ -1655,8 +1667,6 @@
     .is_arclist .board .container,
     .is_arclist .reply .container,
     :root.op-background .postContainer.opContainer .container {
-        height: 30px !important;
-        overflow: hidden;
         position: absolute !important;
         margin-top: -2px !important;
     }
@@ -1862,6 +1872,10 @@
     #qr-filename-container * {
         color: #EBEBEB !important;
     }
+    
+    #qr-filename {
+        font-stretch: condensed !important;
+    }
 
     /* PAGED/INFINITE SCROLL/ALL THREADS */
 
@@ -1951,5 +1965,4 @@
         border: 1px solid #000 !important;
         box-shadow: none !important;
     }
-
 }
